--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,6 @@ body {
 .seeAllPokemonsWrapper {
     height: 100vh;
     width: 100vw;
-border: solid green 3px;
+/* border: solid green 3px; */
 font-size: 30px;
 }
